# analyst-platform

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/app/: debug_page.html  enrichment.py  glassdoor.py  jobs.py  main.py  models.py  pipeline.py  scraper.py
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/extract/: page.tsx
apps/web/app/tools/: page.tsx
apps/web/components/extract/: enrichment-options.tsx  export-toolbar.tsx  extraction-progress.tsx  job-status-badge.tsx  speakers-grid.tsx  upload-form.tsx  url-input-form.tsx
apps/web/components/ui/: badge.tsx  button.tsx  input.tsx  tabs.tsx
apps/web/hooks/: use-extraction-adapter.ts  use-extraction-stream.ts  use-speakers-state.ts
apps/web/lib/: api-client.ts  export-utils.ts
